@@ -39,4 +39,5 @@
 2017-06-06 - V 0.7.2 : New Command to download Class Names for autocomplete
 2017-06-21 - V 0.8.0 : Refactor modules commands to deals with multiples modules
 2017-08-01 - V 0.9.0 : New commands to deals with hooks
-2017-09-09 - V 1.0.0-beta1 : New auto-upgrade process
+2017-08-09 - V 1.0.0-beta1 : New auto-upgrade process
+2017-08-10 - V 1.0.0 : Auto Upgrade works correctly + add build file
